# Neword

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: architecture.md  data-management.md  docx-fixtures.md  docx-import.md  docx-round-trip.md  docx-safety.md  edit-locks.md  editing-behavior.md  import-cancellation.md  import-warnings.md  import-worker.md  linux-install.md  macos-install.md  page-display.md  recovery.md  roadmap.md  search-replace.md  storage-backup-design.md  supported-docx-features.md
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: desktop-template.desktop  dev.local.personal-doc-editor.neword.xml
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: docx.rs  files.rs  mod.rs
src-tauri/src/docx/: package.rs
src/app/: appCommands.ts  appErrors.ts  appInfo.ts  (+2 more)
tests/: appPreferences.test.tsx  appearancePreferences.test.tsx  classification.test.ts  documentProject.test.ts  editingPreferences.test.ts  editorBehavior.test.ts  exportDocument.test.ts  importDocx.test.ts  importWorkerTypes.test.ts  layoutPreferences.test.ts  projectSave.test.ts  recovery.test.ts  saveAsLock.test.tsx  saveSafety.test.ts  stage10AppShell.test.ts  stage12Integration.test.ts  stage13DocumentOps.test.ts  toolbarPreferences.test.ts  uiComponents.test.tsx  units.test.ts  userPreferences.test.ts  userPreferencesStorage.test.ts
(+60 files in other folders)
